--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,17 +10,30 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  run_test:
+    name: Unit Test
+    runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn clean install
+      - run: echo "Starting execute unit test"
+      - uses: actions/checkout@v3
+      - name: Setup JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: 11
+          distribution: 'adopt'
+      - name: Maven Verify
+        run: mvn clean verify
+  build:
+    name: Build
+    runs-on: ubuntu-18.04
+    steps:
+      - run: echo "Starting execute unit test"
+      - uses: actions/checkout@v3
+      - name: Setup JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: 11
+          distribution: 'adopt'
+      - name: Maven Build
+        run: mvn clean package -Dmaven.test.skip=true
+
