--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,6 +22,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-18.04
+    needs: run_test
     steps:
       - run: echo "Starting execute unit test"
       - uses: actions/checkout@v3
