--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=michael
+server.port=8080
 
+
+spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-spring.datasource.driver-class-name=org.postgresql.Driver
