--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,15 @@ jobs:
           distribution: 'adopt'
       - name: Maven Verify
         run: mvn clean verify
+
+      - name: copy file via ssh key
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          port: 5432:5432
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "dev.env"
   build:
     name: Build
     runs-on: ubuntu-18.04
@@ -61,4 +70,4 @@ jobs:
             docker stop example-cicd
             docker rmi michaelmgp/example-cicd:latest
             docker pull michaelmgp/example-cicd:latest
-            docker run -d --rm --name example-cicd -p 80:8080  --network my_network michaelmgp/example-cicd:latest
+            docker run -d --rm --name example-cicd -p 80:8080 --env-file=dev.env --network my_network michaelmgp/example-cicd:latest
