--- a/dev.env
+++ b/dev.env
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://my_network:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=michael
