--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -59,7 +59,7 @@ jobs:
           port: 22
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "./dev.env"
-          target: "home/user"
+          target: home/${{ secrets.DOCKERHUB_USERNAME }}
       - uses: actions/checkout@v3
       - name: Deploy Using ssh
         uses: appleboy/ssh-action@master
