--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -59,8 +59,8 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: 22
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "dev.env"
-          target: home/${{ secrets.SSH_USER }}
+          source: .dev.env
+          target: /home/${{ secrets.SSH_USER }}
       - name: Deploy Using ssh
         uses: appleboy/ssh-action@master
         with:
